Completed fixes to footer and set up for PWA but website took too long

--- a/app/assets/stylesheets/components/_review_cards.scss
+++ b/app/assets/stylesheets/components/_review_cards.scss
@@ -7,39 +7,87 @@
   align-items: center;
 }
 
-.review-card-container{
-  height:100vh;
-  display:grid;
-  align-items:center;
-  background: rgb(255,255,255);
-background: linear-gradient(45deg, rgba(255,255,255,1) 0%, rgba(237,237,237,1) 32%, rgba(235,235,235,1) 100%);
-}
+// Infinite Loop Swiper Card
+// .swiper {
+//   width: 100%;
+//   height: 100%;
+// }
 
-.depth{
-  perspective:1000px;
-  width:100%;
-  height:80%;
-  overflow:hidden;
-  position:relative;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+// .swiper-slide {
+//   text-align: center;
+//   font-size: 18px;
+//   background: #f4f4f4;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
 
-}
+// .swiper-slide img {
+//   display: block;
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover;
+// }
 
-.review-card{
+// .swiper {
+//   margin-left: auto;
+//   margin-right: auto;
+// }
+
+// 3D Cards
+// .review-container{
+//   height:100vh;
+//   display:grid;
+//   align-items:center;
+//   background: rgb(255,255,255);
+// background: linear-gradient(45deg, rgba(255,255,255,1) 0%, rgba(237,237,237,1) 32%, rgba(235,235,235,1) 100%);
+// }
+
+// .depth{
+//   perspective:1000px;
+//   width:100%;
+//   height:80%;
+//   overflow:hidden;
+//   position:relative;
+//   display:flex;
+//   justify-content:center;
+//   align-items:center;
+
+// }
+
+// .card{
+//   position: absolute;
+//   width: 180px;
+//   height: 220px;
+//   margin: 0 40px;
+//   background:white;
+//   border-radius: 20px;
+//   box-shadow: 10px 17px 29px 1px rgba(0,0,0,0.15);
+// -webkit-box-shadow: 10px 17px 29px 1px rgba(0,0,0,0.15);
+// -moz-box-shadow: 10px 17px 29px 1px rgba(0,0,0,0.15);
+//   transition: all .1s linear;
+// }
+
+// .card:hover{
+//   box-shadow: 16px 23px 38px 1px rgba(0,0,0,0.10);
+// }
+
+.swiper {
+  width: 300px;
+  height: 300px;
   position: absolute;
-  width: 180px;
-  height: 220px;
-  margin: 0 40px;
-  background:white;
-  border-radius: 20px;
-  box-shadow: 10px 17px 29px 1px rgba(0,0,0,0.15);
--webkit-box-shadow: 10px 17px 29px 1px rgba(0,0,0,0.15);
--moz-box-shadow: 10px 17px 29px 1px rgba(0,0,0,0.15);
-  transition: all .1s linear;
+  left: 50%;
+  top: 50%;
+  margin-left: -150px;
+  margin-top: -150px;
 }
 
-.card:hover{
-  box-shadow: 16px 23px 38px 1px rgba(0,0,0,0.10);
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
 }
